# DeepSeek-TUI

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPENDENCY_GRAPH.md  ONBOARDING.md  PROMPT_ANALYSIS.md  SECURITY.md  TAKEOVER_PROMPT.md  V086_BRIEF.md  config.example.toml  config.toml  package-lock.json  package.json
.claude/: v0.8.10-handoff-2.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
crates/app-server/src/: lib.rs  main.rs
crates/cli/src/: lib.rs  metrics.rs  update.rs
crates/config/src/: lib.rs
crates/core/src/: lib.rs
crates/execpolicy/src/: bash_arity.rs  lib.rs
crates/hooks/src/: lib.rs
crates/lancedb-dump/: Cargo.toml
crates/lancedb-dump/src/: main.rs
crates/mcp/src/: lib.rs
crates/secrets/src/: lib.rs
crates/state/src/: lib.rs
crates/tools/src/: lib.rs
crates/tui/: Cargo.toml
crates/tui-core/src/: lib.rs
crates/tui/assets/: pricing.json  providers.json
crates/tui/i18n/: en.json
crates/tui/src/: acp_server.rs  (+44 more)
docs/: ACCESSIBILITY.md  AI_I18N_PLAN.md  ARCHITECTURE.md  COMPETITIVE_ANALYSIS.md  CONFIGURATION.md  CONTEXT_MEMORY_ARCHITECTURE.md  DOCKER.md  INSTALL.md  KEYBINDINGS.md  LEGACY_RUST_AUDIT_0_7_6.md  LOCALIZATION.md  MCP.md  MEMORY.md  MODES.md  OPERATIONS_RUNBOOK.md  RELEASE_RUNBOOK.md  RUNTIME_API.md  SUBAGENTS.md  TOOL_SURFACE.md  V0_7_5_IMPLEMENTATION_PLAN.md  capacity_controller.md  v0.8.8-coordinator-prompt.md
docs/archive/: V0_7_5_IMPLEMENTATION_PLAN.md
npm/deepseek-tui/: README.md
web/: AGENT.md  README.md
(+217 files in other folders)
