[package]
name = "lancedb-dump"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Dump all memory entries from the production LanceDB database for inspection."

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
lancedb = "0.27"
arrow-array = "57"
futures-util = "0.3"
chrono = "0.4"
